--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@ function square() {
 </script>
 </head>
 <body>
+  <h1>Pablo Fernandez Fernandez, Pedro Diaz Alvarez</h1>
   Number:
   <input type="text" id="n1"><p>
 
